# prom-crispy-fortnight

./: .gitconfig  .gitignore  .pre-commit-config.yaml  clear-notebooks-output.sh  cpu-load-extraction.ipynb  matching-worker-data-hpa.ipynb  mem-usage-extraction.ipynb  pods-cpu-request.ipynb  pods-mem-request.ipynb  prom_usage_service.py  pyproject.toml  request-sizing.ipynb  stats_service.py  time_series.py
prometheus/: __init__.py  prom_pod_usage_service.py  prom_workload_usage_service.py
stats/: base.py  peaks.py  smoothing.py  stats_service.py
tests/: test_base.py  test_peaks.py  test_promusage_service.py  test_smoothing.py  test_time_series.py
time_series/: time_series.py
