[tool.poetry]
authors = ["Frédéric Laudarin <frederic.laudarin@365talents.com>"]
description = "Prometheus based monitoring + stats"
name = "prom-crispy"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
ipympl = "^0.9.2"
jupyterlab = "^3.5.0"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
orjson = "^3.8.1"
prometheus-api-client = "^0.5.2"
python = "^3.10"
scipy = "^1.9.3"
ipywidgets = "^8.0.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = [
  "tests",
]

[tool.black]
line-length = 120

[tool.isort]
# make it compatible with black
line_length = 120
profile = "black"
